# cmd_chess

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.zig  build.zig.zon  cmd_chess  compile_commands.json
include/: ansi_codes.h  array.h  bitboard.h  board_moves.h  piece_moves.h  player_input.h  player_moves.h  print_board.h  term_draw.h
src/: array.c  bitboard.c  board_moves.c  cmd_chess_client_main.c  cmd_chess_main.c  cmd_chess_server_main.c  main.c  main.zig  piece_moves.c  player_input.c  print_board.c  print_board.zig  term_draw.c
tests/: test.h  test_array.c  test_bitboard.c  test_piece_moves.c  test_piece_moves_with_pieces.c
